# CooperCo

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: CODEOWNERS
.github/agents/: rust-yew-rocket-surreal-template.agent.md
.github/workflows/: deploy.yml  frontend.yml  scorecard.yml
backend/: .env.example  Cargo.toml  Rocket.toml
backend/src/: config.rs  db.rs  main.rs  models.rs  routes.rs  seo.rs
content/: business_profile.toml
docs/: CONTENT_REQUIREMENTS.md  LOCAL_SEO_CHECKLIST.md  SEARCH_ENGINE_SETUP.md  SEO_ARCHITECTURE.md  SEO_AUDIT.md  SEO_REDIRECT_MAP.md  SEO_RELEASE_CHECKLIST.md
frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
frontend/public/: robots  robots.txt  sitemap.xml
frontend/public/assets/: cooperco-pet-services-hero.avif  facebook-cooperco-gallery-1.avif  facebook-cooperco-gallery-2.avif  facebook-cooperco-gallery-3.avif  facebook-cooperco-hero.avif  group-dog-classes-lorain-county.avif  puppy-training-lorain-county.avif
frontend/src/: api.rs  main.rs
scripts/: seo-audit.ps1  strip-generated-js-comments.mjs
