[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
jsonwebtoken = "9"
rand = "0.8"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
surrealdb = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
