[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "Location", "Window"] }
yew = { version = "0.21", features = ["csr"] }
